syntax = "proto3";
package poset;

message FlagTableWrapper {
  map<string, int64> Body = 1;
}
